[package]
name = "rpixi"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]

[dependencies]
num = "0.1.40"
piston_window = "0.71.1"
image = "0.16.0"
structopt = "0.1.1"
structopt-derive = "0.1.1"
rayon = "0.8.2"
imageproc = "0.11.0"
rusttype = "0.2.3"
itertools = "0.6.4"
indicatif = "0.7.0"